# rustboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  example.env  rustboard.service
migrations/: 0001_initial.sql  0002_settings.sql  0003_optional_thread_image.sql
src/: admin_auth.rs  config.rs  db.rs  error.rs  i18n.rs  main.rs  models.rs  rate_limit.rs  utils.rs
src/routes/: admin.rs  board.rs  boards.rs  lang.rs  mod.rs  thread.rs
src/templates/: mod.rs
static/: style.css
templates/: _post.html  base.html  board.html  board_list.html  error.html  thread.html
templates/admin/: base.html  boards.html  dashboard.html  login.html  posts.html  settings.html
