[package]
name = "rustboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio              = { version = "1.50.0",    features = ["full"] }
axum               = { version = "0.8.8",  features = ["multipart"] }
tower-http         = { version = "0.6.8",  features = ["fs", "trace", "set-header"] }
askama             = "0.15.5"
sqlx               = { version = "0.8.6",  features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
serde              = { version = "1.0.228",    features = ["derive"] }
anyhow             = "1.0.102"
sha2               = "0.10.9"
hex                = "0.4.3"
image              = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23",  features = ["env-filter"] }
toml               = { version = "0.9.8", features = ["parse"] }
uuid               = { version = "1.22.0",    features = ["v4"] }
chrono             = { version = "0.4.44",  features = ["serde"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
